--- a/scalffoldeth2/package.json
+++ b/scalffoldeth2/package.json
@@ -50,11 +50,16 @@
     "verify": "yarn hardhat:verify"
   },
   "devDependencies": {
+    "hardhat": "^2.26.2",
     "husky": "~9.1.6",
     "lint-staged": "~13.2.2"
   },
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "ethers": "5",
+    "wagmi": "0.12.11"
   }
 }
