--- a/scalffoldeth2/packages/nextjs/package.json
+++ b/scalffoldeth2/packages/nextjs/package.json
@@ -40,8 +40,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "4.0.15",
     "@trivago/prettier-plugin-sort-imports": "~4.3.0",
-    "@types/node": "~18.19.50",
-    "@types/react": "~19.0.7",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
     "abitype": "1.0.6",
     "autoprefixer": "~10.4.20",
     "bgipfs": "~0.0.12",
@@ -53,7 +53,7 @@
     "prettier": "~3.5.3",
     "tailwindcss": "4.1.3",
     "type-fest": "~4.26.1",
-    "typescript": "~5.8.2",
+    "typescript": "^5.9.2",
     "vercel": "~39.1.3"
   },
   "packageManager": "yarn@3.2.3"
