--- a/scalffoldeth2/packages/hardhat/package.json
+++ b/scalffoldeth2/packages/hardhat/package.json
@@ -6,6 +6,7 @@
     "account:generate": "hardhat run scripts/generateAccount.ts",
     "account:import": "hardhat run scripts/importAccount.ts",
     "account:reveal-pk": "hardhat run scripts/revealPK.ts",
+    "account:fund": "hardhat run scripts/fundAccount.ts",
     "chain": "hardhat node --network hardhat --no-deploy",
     "check-types": "tsc --noEmit --incremental",
     "clean": "hardhat clean",
@@ -22,6 +23,7 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
+    "@inquirer/input": "^2.0.0",
     "@inquirer/password": "^4.0.2",
     "@openzeppelin/contracts": "~5.0.2",
     "@typechain/ethers-v6": "~0.5.1",
