--- a/scalffoldeth2/packages/nextjs/package.json
+++ b/scalffoldeth2/packages/nextjs/package.json
@@ -24,6 +24,7 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
+    "firebase": "~10.13.1",
     "kubo-rpc-client": "~5.0.2",
     "next": "^15.4.6",
     "next-nprogress-bar": "~2.3.13",
