--- a/scalffoldeth2/packages/nextjs/package.json
+++ b/scalffoldeth2/packages/nextjs/package.json
@@ -38,7 +38,8 @@
     "usehooks-ts": "~3.1.0",
     "viem": "^2.33.3",
     "wagmi": "2.15.6",
-    "zustand": "~5.0.0"
+    "zustand": "~5.0.0",
+    "nodemailer": "~6.9.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.0.15",
