--- a/scalffoldeth2/packages/nextjs/package.json
+++ b/scalffoldeth2/packages/nextjs/package.json
@@ -31,6 +31,7 @@
     "next": "^15.4.6",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
+    "nodemailer": "~6.9.13",
     "qrcode.react": "~4.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -38,8 +39,7 @@
     "usehooks-ts": "~3.1.0",
     "viem": "^2.33.3",
     "wagmi": "2.15.6",
-    "zustand": "~5.0.0",
-    "nodemailer": "~6.9.13"
+    "zustand": "~5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.0.15",
